# PiCamWebStream

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  main.rs
backend/src/camera/: mock.rs  mod.rs  v4l2.rs
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts
frontend/src/lib/: api.ts  types.ts
